# calculator

./: .gitignore  CMakeLists.txt  main.c
calculator/: Calculator.c  Calculator.h
calculator/command/: CalculatorCommand.c  CalculatorCommand.h
calculator/core/: CalculatorCore.c  CalculatorCore.h
calculator/function/: BaseFunction.c  BaseFunction.h
calculator/operator/: BaseOperator.c  BaseOperator.h
calculator/utli/: Array.c  Array.h  Stack.c  Stack.h
